# beetswap

./: CHANGELOG.md  Cargo.toml  README.md  regen-proto.sh
.github/workflows/: ci.yml  release-plz.yml
examples/: client.rs  node.rs
src/: builder.rs  cid_prefix.rs  client.rs  incoming_stream.rs  lib.rs  message.rs  multihasher.rs  server.rs  test_utils.rs  utils.rs  wantlist.rs
src/proto/: message.proto  message.rs
tests/: bitswap.rs
tests/utils/: mod.rs
