[package]
name = "beetswap"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Implementation of bitswap protocol for libp2p"
rust-version = "1.75"

[dependencies]
asynchronous-codec = "0.7"
blockstore = "0.4"
bytes = "1"
cid = "0.11"
fnv = "1.0.5"
futures = "0.3"
futures-timer = "3"
instant = "0.1.12"
libp2p-core = "0.41"
libp2p-identity = "0.2"
libp2p-swarm = "0.44"
multihash-codetable = "0.1"
quick-protobuf = "0.8"
smallvec = "1"
thiserror = "1"
tracing = "0.1"
unsigned-varint = "0.8"
void = "1"

[dev-dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
hex = "0.4"
libp2p = { version = "0.53", features = ["tokio", "tcp", "identify", "macros"] }
libp2p-noise = "0.44"
libp2p-stream = "0.1.0-alpha"
libp2p-swarm-test = "0.3.0"
libp2p-yamux = "0.45"
log = "0.4.18" # needed for minimal-versions
multihash = "0.19"
multihash-codetable = { version = "0.1", features = ["digest", "sha2"] }
tokio = { version = "1", features = ["rt", "macros", "time", "sync"] }
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[features]
wasm-bindgen = ["futures-timer/wasm-bindgen", "instant/wasm-bindgen"]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docs_rs"]
